src/test/ui/const-generics/different_byref.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/different_byref.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error[E0308]: mismatched types
  --> $DIR/different_byref.rs:8:9
   |
LL |     x = Const::<{ [4] }> {};
   |         ^^^^^^^^^^^^^^^^^^^ expected `3usize`, found `4usize`
   |
   = note: expected struct `Const<[3usize]>`
              found struct `Const<[4usize]>`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
